--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       restart: unless-stopped
       ports:
         - 8081:80
+      networks:
+        - prestashop_network
 
   prestashop:
     container_name: prestashop
