--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -14,8 +14,6 @@ services:
   phpmyadmin:
       image: phpmyadmin/phpmyadmin
       container_name: phpmyadmin
-      links:
-        - some-mysql
       environment:
         PMA_HOST: some-mysql
         PMA_PORT: 3306
@@ -28,7 +26,7 @@ services:
 
   prestashop:
     container_name: prestashop
-    image: prestashop/prestashop:latest
+    image: prestashop/prestashop:1.7.8.10-7.4-apache
     restart: unless-stopped
     depends_on:
       - mysql
