--- a/docker-compose/docker-compose.dev.yml
+++ b/docker-compose/docker-compose.dev.yml
@@ -1,15 +1,16 @@
 services:
   nginx:
-    image: nginx:latest
-    container_name: nginx_dev
+    container_name: nginx
+    image: nginx:alpine
+    restart: unless-stopped
+    depends_on:
+      - prestashop
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx/dev.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/ssl:/etc/nginx/ssl
-      - psdata:/var/www/html
     networks:
       - prestashop_network
-    depends_on:
-      - prestashop
+    volumes:
+      - ./nginx/dev.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - psdata:/var/www/html:ro
