--- a/prestashop/docker-compose.yml
+++ b/prestashop/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     container_name: prestashop
     build:
       context: .
-      dockerfile: ./prestashop/Dockerfile
+      dockerfile: /Dockerfile/prestashop/Dockerfile
     restart: unless-stopped
     depends_on:
       mysql:
@@ -64,13 +64,24 @@ services:
     networks:
       - prestashop_network
     volumes:
-      - type: bind
-        source: ./modules/testModule
-        target: /var/www/html/modules/testModule
-      - type: bind
-        source: ./themes/myTheme
-        target: /var/www/html/themes/myTheme
       - psdata:/var/www/html
+
+  nginx:
+    container_name: nginx
+    image: nginx:alpine
+    restart: unless-stopped
+    depends_on:
+      - prestashop
+    ports:
+      - "80:80"
+      - "443:443"
+    networks:
+      - prestashop_network
+    volumes:
+      - ./nginx/dev.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - psdata:/var/www/html:ro
+
 networks:
   prestashop_network:
 volumes:
