--- a/prestashop/docker-compose.yml
+++ b/prestashop/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   mysql:
     container_name: some-mysql
-    image: mysql:5.7
+    image: mysql:8.4
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
@@ -35,7 +35,7 @@ services:
     container_name: prestashop
     build:
       context: .
-      dockerfile: /Dockerfile/prestashop/Dockerfile
+      dockerfile: ./Docker/prestashop/Dockerfile
     restart: unless-stopped
     depends_on:
       mysql:
