--- a/prestashop/src/.gitignore
+++ b/prestashop/src/.gitignore
@@ -180,7 +180,8 @@ modules/*
 override/*
 themes/*/
 !themes/classic
-themes/classic/assets
+themes/classic/assets/cache
+
 !themes/_core
 !themes/_libraries
 themes/classic/assets/css/*_rtl.css
