--- a/prestashop/docker-compose.yml
+++ b/prestashop/docker-compose.yml
@@ -61,6 +61,7 @@ services:
       PS_ENABLE_SSL: ${PS_SSL}
       PS_HANDLE_DYNAMIC_DOMAIN: 0
       PS_DEMO_MODE: 0
+      PS_INSTALL_FIXTURES: ${PS_INSTALL_FIXTURES}
     networks:
       - prestashop_network
     volumes:
