--- a/prestashop/src/themes/classic/config/theme.yml
+++ b/prestashop/src/themes/classic/config/theme.yml
@@ -70,6 +70,7 @@ global_settings:
       displayNav2:
         - ps_languageselector
         - ps_currencyselector
+        - ps_shoplocation
         - ps_customersignin
         - ps_shoppingcart
       displaySearch:
@@ -95,8 +96,6 @@ global_settings:
       displayLeftColumn:
         - ps_categorytree
         - ps_facetedsearch
-      displaySearch:
-        - ps_searchbar
       displayProductAdditionalInfo:
         - ps_sharebuttons
       displayReassurance:
