Add shoplocation module to src modules
Add not to ignore new module

--- a/prestashop/src/.gitignore
+++ b/prestashop/src/.gitignore
@@ -177,6 +177,7 @@ app/config/config.php
 # Themes, modules and overrides
 
 modules/*
+!modules/ps_shoplocation/
 override/*
 themes/*/
 !themes/classic
