--- a/prestashop/src/themes/classic/config/theme.yml
+++ b/prestashop/src/themes/classic/config/theme.yml
@@ -73,6 +73,7 @@ global_settings:
         - ps_shoplocation
         - ps_customersignin
         - ps_shoppingcart
+        - ps_shoplocation
       displaySearch:
         - ps_searchbar
       displayTop:
