benefits and localizations in good modules folder

--- a/prestashop/src/.gitignore
+++ b/prestashop/src/.gitignore
@@ -178,6 +178,7 @@ app/config/config.php
 
 modules/*
 !modules/ps_shoplocation/
+!modules/ps_tuttubenefits/
 override/*
 themes/*/
 !themes/classic
