--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 scraper/data/photos/
 scraper/data/categories.txt
 scraper/data/products.json
+scraper/prepared_data/products_in_categories.json
 .env.*
 
 nginx/ssl/
