Update gitignore for newsletter images

--- a/prestashop/src/.gitignore
+++ b/prestashop/src/.gitignore
@@ -368,3 +368,7 @@ tools/build/releases/*
 
 ## Docker configuration
 install.lock
+
+# Img for newsletter page customization 
+!img/bon.png
+!img/newsletter-bg.png
