29 home page panel (#49)
* slider finished, added listy zakupowe button and modified sklepy

* finished navBar, added custom menu

--- a/prestashop/src/.gitignore
+++ b/prestashop/src/.gitignore
@@ -180,6 +180,9 @@ modules/*
 !modules/ps_shoplocation/
 !modules/ps_tuttubenefits/
 !modules/ps_listyzakupowe/
+!modules/ps_mywishlist/
+!modules/ps_wishlistbutton/
+!modules/ps_custom_menu/
 override/*
 themes/*/
 !themes/classic
