--- a/prestashop/src/themes/classic/config/theme.yml
+++ b/prestashop/src/themes/classic/config/theme.yml
@@ -72,7 +72,7 @@ global_settings:
         - ps_currencyselector
         - ps_shoplocation
         - ps_customersignin
-        - blockwishlist
+        - ps_wishlistbutton
         - ps_shoppingcart
       displaySearch:
         - ps_searchbar
@@ -81,6 +81,7 @@ global_settings:
       displayHome:
         - ps_imageslider
         - ps_tuttubenefits
+        - ps_custom_menu
         - ps_featuredproducts
         - ps_listyzakupowe
         - ps_banner
@@ -109,7 +110,9 @@ global_settings:
         - ps_featuredproducts
       displayProductActions:
         - blockwishlist
-
+      displayMyWishlist:
+        - ps_mywishlist
+  
   image_types:
     cart_default:
       width: 125
