finished navBar, added custom menu

--- a/prestashop/src/.gitignore
+++ b/prestashop/src/.gitignore
@@ -182,6 +182,7 @@ modules/*
 !modules/ps_listyzakupowe/
 !modules/ps_mywishlist/
 !modules/ps_wishlistbutton/
+!modules/ps_custom_menu/
 override/*
 themes/*/
 !themes/classic
