--- a/prestashop/src/.gitignore
+++ b/prestashop/src/.gitignore
@@ -371,3 +371,7 @@ tools/build/releases/*
 
 ## Docker configuration
 install.lock
+
+# Img for newsletter page customization 
+!img/bon.png
+!img/newsletter-bg.png
