--- a/prestashop/src/.gitignore
+++ b/prestashop/src/.gitignore
@@ -371,6 +371,8 @@ tools/build/releases/*
 
 ## Docker configuration
 install.lock
+!modules/ps_wirepayment/
+!modules/ps_cashondelivery/
 
 # Img for newsletter page customization 
 !img/bon.png
